[gd_scene load_steps=2 format=3 uid="uid://bn5raibrmwhmh"]

[ext_resource type="Script" uid="uid://ddr1dpcbhttd3" path="res://components/automation/api_block.gd" id="1_bhifq"]

[node name="ApiBlock" type="PanelContainer"]
script = ExtResource("1_bhifq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Grid" type="GridContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Grid"]
layout_mode = 2
text = "URL:"

[node name="UrlInput" type="LineEdit" parent="HBoxContainer/VBoxContainer/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "http://localhost:1234/v1/chat/completions"

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/Grid"]
layout_mode = 2
text = "Key:"

[node name="KeyInput" type="LineEdit" parent="HBoxContainer/VBoxContainer/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "API Key (optional for local)..."
secret = true

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer/Grid"]
layout_mode = 2
text = "Model:"

[node name="ModelInput" type="LineEdit" parent="HBoxContainer/VBoxContainer/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "gemini-3-flash-preview"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Footer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Footer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Usage Ratio:"

[node name="WeightInput" type="SpinBox" parent="HBoxContainer/VBoxContainer/Footer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 10000.0
value = 1.0

[node name="StatsLabel" type="Label" parent="HBoxContainer/VBoxContainer/Footer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "100%"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="DeleteBtn" type="Button" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "X"
